--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "mobile-detect": "^1.4.3",
     "mongodb": "^3.1.13",
     "mongoose": "^5.3.14",
     "multer": "^1.4.1",
-    "shortid": "^2.2.14"
+    "shortid": "^2.2.14",
+    "ua-parser": "^0.3.5"
   },
   "browserslist": [
     ">0.2%",
