--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
